fixed overflow hidden bug

--- a/scss/partials/homepage.scss
+++ b/scss/partials/homepage.scss
@@ -4,11 +4,6 @@
   box-sizing: border-box;
 }
 
-body {
-  overflow: hidden;
-  background: #fff3e0;
-}
-
 svg {
   width: 0;
   height: 0;
