--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,7 +3,7 @@
 @import './partials/homepage.scss';
 
 $break-small: 600px;
-$break-large: 1200px;
+$break-large: 900px;
 $fontheadercolor: hsl(290,0%,49%);
 $fontdescolor: hsl(290,0%,50%);
 $fontformcolor: hsl(290,0%,70%);
@@ -136,8 +136,13 @@ html {
     background-color: floral-white;
   }
 
-  @media screen and (min-width: $break-small) {
-    background-color: lightyellow;
+  @media screen and (min-width: $break-large) {
+    background-color: hsl(200, 100%, 95%);
+
+    h1 {
+      font-size: 60px;
+    }
+
   }
 
   .form {
@@ -148,6 +153,17 @@ html {
 
     h2 {
       font-size: 20px;
+    }
+
+    @media screen and (min-width: $break-large) {
+      p {
+        font-size: 24px;
+      }
+
+      h2 {
+        font-size: 30px;
+      }
+
     }
   }
 
